--- a/beam-weather/pom.xml
+++ b/beam-weather/pom.xml
@@ -37,6 +37,11 @@
             <version>${bean.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.influxdb</groupId>
+            <artifactId>influxdb-client-java</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>3.1.0</version>
