--- a/data-generator/build.gradle
+++ b/data-generator/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation group: 'org.json', name: 'json', version: '20211205'
+    implementation group: 'io.ably', name: 'ably-java', version: '1.2.11'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
